<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/cyee_confirm_dialog_id_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cyee_confirm_dialog_title_height"
        android:gravity="start|bottom"
        android:paddingBottom="@dimen/cyee_confirm_dialog_title_bottom_padding"
        android:paddingStart="@dimen/cyee_confirm_dialog_title_left_padding"
        android:textColor="@color/system_stress_color"
        android:textSize="@dimen/cyee_confirm_dialog_title_text_size"
        android:text="@string/import_backup_config_dialog_title" />

    <TextView
        android:id="@+id/cyee_confirm_dialog_id_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/cyee_confirm_dialog_message_padding"
        android:textColor="@color/cyee_confirm_dialog_message_text_color"
        android:text="@string/import_backup_config_dialog_message"
        android:textSize="@dimen/cyee_confirm_dialog_message_text_size" />

    <cyee.widget.CyeeCheckBox
        android:id="@+id/import_dialog_checkBox_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/import_backup_dialog_content_margin"
        android:layout_marginStart="@dimen/import_backup_dialog_content_margin"
        android:text="@string/import_backup_config_dialog_checkbox_text"
        android:textColor="@color/import_backup_checkbox_text_color"
        android:textSize="@dimen/import_backup_checkbox_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/cyee_confirm_dialog_button_height"
        android:background="@android:color/transparent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cyee_confirm_dialog_id_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/cyee_confirm_dialog_button_margin"
            android:layout_weight="1"
            style="@style/ChickBgEffect"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/import_backup_config_dialog_btn_cancel"
            android:textColor="@color/dialog_cancel_text_color"
            android:textSize="@dimen/cyee_confirm_dialog_button_text_size" />

        <TextView
            android:id="@+id/cyee_confirm_dialog_id_ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/cyee_confirm_dialog_button_margin"
            android:layout_weight="1"
            style="@style/ChickBgEffect"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/import_backup_config_dialog_btn_import"
            android:textColor="@color/dialog_ok_text_color"
            android:textSize="@dimen/cyee_confirm_dialog_button_text_size" />
    </LinearLayout>

</LinearLayout>
