<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/congratulations_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/password_set_successed_congratulations_container_height"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/password_set_success" />

                <cyee.widget.CyeeTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/password_set_successed_congratulations_margin_top"
                    android:gravity="center"
                    android:text="@string/password_set_successed_congratulations"
                    android:textColor="@color/password_set_successed_congratulations_text_color"
                    android:textSize="@dimen/password_set_successed_congratulations_text_size" />

                <cyee.widget.CyeeTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="@dimen/password_set_successed_padding"
                    android:paddingEnd="@dimen/password_set_successed_padding"
                    android:text="@string/password_set_successed"
                    android:textColor="@color/password_set_successed_congratulations_text_color"
                    android:textSize="@dimen/password_set_successed_congratulations_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/congratulations_container"
                android:layout_marginBottom="@dimen/password_set_successed_congratulations_margin_bottom"
                android:layout_marginTop="@dimen/password_set_successed_tips_container_margin_top"
                android:orientation="vertical"
                android:paddingStart="@dimen/password_set_successed_padding"
                android:paddingEnd="@dimen/password_set_successed_padding">

                <cyee.widget.CyeeTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password_set_successed_tips"
                    android:textColor="@color/password_set_successed_tips_text_color"
                    android:textSize="@dimen/password_set_successed_button_text_size" />

                <cyee.widget.CyeeTextView
                    android:id="@+id/first_tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/password_set_successed_congratulations_margin_top"
                    android:textColor="@color/password_set_successed_tips_text_color"
                    android:textSize="@dimen/password_set_successed_tips_text_size" />

                <cyee.widget.CyeeTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password_set_successed_tips_second"
                    android:textColor="@color/password_set_successed_tips_text_color"
                    android:textSize="@dimen/password_set_successed_tips_text_size" />
            </LinearLayout>

            <cyee.widget.CyeeButton
                android:id="@+id/success"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/password_set_successed_padding"
                android:layout_marginStart="@dimen/password_set_successed_padding"
                android:layout_marginEnd="@dimen/password_set_successed_padding"
                android:gravity="center"
                android:text="@string/password_set_successed_sure"
                android:textColor="@color/password_set_successed_congratulations_text_color"
                android:textSize="@dimen/password_set_successed_button_text_size" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
