<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <cyee.widget.CyeeTextView
        android:id="@+id/vsq_tip_text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="23dp"
        android:ellipsize="end"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/vsq_tip_text"
        android:textColor="#705345"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/vsq_q_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/vsq_tip_text_id"
        android:layout_margin="16sp"
        android:layout_marginTop="16dp"
        android:background="@color/password_protect_btn_bg_color"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/question_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#0d000000"
            android:orientation="horizontal">

            <cyee.widget.CyeeTextView
                android:id="@+id/vsq_tip_q_text_id"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical"
                android:text="@string/sq_q_text_tip"
                android:textColor="#80000000"
                android:textSize="14sp" />

            <cyee.widget.CyeeEditText
                android:id="@+id/vsq_question_edit_id"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toStartOf="@+id/more_question"
                android:layout_toEndOf="@+id/vsq_tip_q_text_id"
                android:background="@null"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:textColor="#cc000000"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/more_question"
                style="@style/RippleEffect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:src="@drawable/action_bill_icon" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:background="#50ffffff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="#0d000000"
            android:orientation="horizontal">

            <cyee.widget.CyeeTextView
                android:id="@+id/vsq_tip_a_text_id"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical"
                android:text="@string/sq_a_text_tip"
                android:textColor="#80000000"
                android:textSize="14sp" />

            <cyee.widget.CyeeEditText
                android:id="@+id/vsq_answer_edit_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:maxEms="50"
                android:singleLine="true"
                android:textColor="#cc000000"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/password_protect_btn_height"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/password_protect_margin_padding"
        android:background="@color/password_protect_btn_bg_color"
        android:orientation="horizontal">

        <cyee.widget.CyeeButton
            android:id="@+id/vsq_cancle_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/button_cancel"
            android:textColor="#80000000"
            android:textSize="@dimen/password_protect_btn_text_size" />

        <cyee.widget.CyeeButton
            android:id="@+id/vsq_confirm_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/vsq_confirm_btn_text"
            android:textColor="#80000000"
            android:textSize="@dimen/password_protect_btn_text_size" />
    </LinearLayout>

</RelativeLayout>
