<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/aboutus_launcher_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/aboutus_launcher_icon_top_margin"
                android:src="@drawable/about_app_icon" />

            <cyee.widget.CyeeTextView
                android:id="@+id/aboutus_note_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/aboutus_launcher_icon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/aboutus_note_text_top_margin"
                android:text="@string/app_name"
                android:textColor="@color/about_app_note_name_color"
                android:textSize="@dimen/aboutus_note_content_textsize" />

            <cyee.widget.CyeeTextView
                android:id="@+id/aboutus_version_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/aboutus_note_text"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/aboutus_launcher_icon_top_margin"
                android:layout_marginTop="@dimen/aboutus_version_text_top_margin"
                android:text="@string/aboutus_version_content_text"
                android:textColor="@color/about_app_note_version_color"
                android:textSize="@dimen/aboutus_version_content_textsize" />

            <cyee.widget.CyeeTextView
                android:id="@+id/aboutus_copyright_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/aboutus_copyright_text_bottom_margin"
                android:ellipsize="end"
                android:gravity="center"
                android:maxEms="17"
                android:text="@string/aboutus_copyright_content_text"
                android:textColor="@color/about_app_note_copyright_color"
                android:textSize="@dimen/aboutus_copyright_content_textsize" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>


